SVG panning y-axis is flipped in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=65800 <rdar://problem/9908012>

Reviewed by Darin Adler.

We previously were not transforming the pointer coordinates passed
to SVGDocument's panning implementation into the coordinate space of
the contents, so on different platforms, the drag direction was different.

Test: svg/custom/pan-direction.svg


Canonical link: https://commits.webkit.org/83042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94114 268f45cc-cd09-0410-ab3c-d52691b4dbfc